Realized solution propost by CursoEmVideo - Javascript - Exercicios (parte 5)

--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
   <section>
     <div>
       <p>Início:
-        <input type="number" id="inicio"/>
+        <input type="number" id="txtInicio"/>
       </p>
       <p>Fim:
-        <input type="number" id="fim"/>
+        <input type="number" id="txtFim"/>
       </p>
       <p>Passo:
-        <input type="number" id="passo"/>
+        <input type="number" id="txtPasso"/>
       </p>
       <p>
         <button onClick="contar()">Contar</button>
       </p>
     </div>
-    <div id="res">
+    <div id="txtResultado">
       Preparando a contagem . . .
     </div>
   </section>
